# DHE-Modules

./: .appveyor.yml  .clang-format  .clang-tidy  .clang_complete  .envrc  .gitignore  .gitmodules  .travis.yml  CHANGES.md  CMakeLists.txt  DHE-Modules.json  Gemfile  LICENSE.txt  Makefile  README.md  Rakefile  VERSION.txt  _config.yaml  _config.yml  compile_commands.json  config.toml  config.yaml  dale.mk  definitions.mk  guides.md  index.html  index.md  plugin.json  release-notes.md  technical.md  versions.md
dependencies/: CMakeLists.txt
dependencies/googletest/: CMakeLists.txt
dependencies/racksdk/: CMakeLists.txt
plugin/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  PluginInitializer.cpp
plugin/common/: CMakeLists.txt
plugin/components/: CMakeLists.txt  Range.h
plugin/config/: CMakeLists.txt  CommonConfig.h  CurvatureConfig.cpp  DurationConfig.cpp  DurationConfig.h  LevelConfig.cpp  LevelConfig.h
plugin/controls/: CMakeLists.txt  CommonInputs.cpp  CommonInputs.h  DurationInputTests.cpp  DurationInputs.cpp  DurationInputs.h  LevelInputTests.cpp  LevelInputs.h
plugin/include/: dhe-modules.h
plugin/modules/: CMakeLists.txt  Panel.h  PluginInitializer.cpp
plugin/src/: bloomer.cpp  blossom.cpp  booster-stage.cpp  cubic.cpp  dhe-modules.cpp  func.cpp  hostage.cpp  ranger.cpp  stage.cpp  swave.cpp  tapers.cpp  upstage.cpp  xycloid.cpp
plugin/test/: CMakeLists.txt
plugin/tests/: defer-gate-tests.cpp  run-tests.cpp
plugin/widgets/: CMakeLists.txt  Panel.h
src/: BinaryOutput.cpp  CMakeLists.txt  DHEModules.cpp  DHEModules.hpp  FlipFlop.cpp  Freezer.cpp  Latch.cpp  Latch.hpp  Plugin.cpp  PluginInitializer.cpp  Ramp.cpp  Ramp.hpp  Stage.cpp  Stage.hpp  StageWidget.cpp  SwitchedOutput.cpp  blossom.cpp  booster-stage.cpp  booster-stage.cpp.json  cubic.cpp  cubic.cpp.json  dhe-modules.cpp  dhe-modules.cpp.json  func.cpp  func.cpp.json  hostage.cpp  hostage.cpp.json  juster.cpp  knobs.cpp  module-widget.cpp  module-widget.h  module.cpp  module.h  plugin.cpp  ranger.cpp  ranger.cpp.json  stage.cpp  stage.cpp.json  swave.cpp  swave.cpp.json  (+7 more)
src/components/: CMakeLists.txt  Latch.h  PhaseRotor.h  PhaseTimer.h  Range.h  RangedDuration.cpp  Sigmoid.h  Taper.h  cxmath.h  latch.h  meta.h  phase-rotor.h  phase-timer.h  range.h  sigmoid.h  taper.h
src/config/: CMakeLists.txt  CommonConfig.h  CurvatureConfig.h  DurationConfig.h  LevelConfig.h  common-config.h  curvature-config.h  duration-config.h  level-config.h
src/controllers/: attenuverter.h  button-control.h  duration-control.h  input-port-control.h  level-control.h  modulated-control.h  output-port-control.h  shape-control.h  sj-controller.h  sport-controller.h  stage-controller.h  swave-controller.h  upstage-controller.h
src/controls/: CMakeLists.txt  CommonInputs.cpp  CommonInputs.h  CurvatureInputs.h  DurationInputs.cpp  DurationInputs.h  LevelInputs.h  button-styles.h  buttons.h  common-inputs.h  curvature-inputs.h  duration-controls.h  duration-inputs.h  knob-quantity.h  knob-styles.h  knob-widget.h  knob.cpp  knobs.h  level-inputs.h  picked-quantity.h  port.h  ports.h  range-switch-quantity.h  scaled-param-quantity.h  scaled-quantity.h  shape-controls.h  step-selection-controls.h  steppers.h  switch-quantity.h  switch-widget.h  switches.h  voltage-controls.h
src/envelopes/: StateMachine.cpp
src/gui/: StageWidget.cpp  Widget.cpp  Widget.hpp  bicycle-widget.cpp  bicycle-widget.h  booster-stage-widget.cpp  cubic-widget.cpp  cubic-widget.h  cycloid-widget.cpp  cycloid-widget.h  hostage-widget.cpp  module-widget.cpp  module-widget.h  snob-widget.cpp  snob-widget.h  stage-widget.cpp  stage-widget.h  swave-widget.cpp  upstage-widget.cpp  upstage-widget.h  widget.cpp  widget.h  xycloid-widget.cpp  xycloid-widget.h  xyclotron-widget.cpp  xyclotron-widget.h  xynchrotron-widget.cpp  xynchrotron-widget.h
src/modules/: Blossom.cpp  BoosterStage.cpp  CMakeLists.txt  Cubic.cpp  CurveSequencer.cpp  CurveSequencer16.cpp  CurveSequencer8.cpp  CurveSequencerModule.cpp  DHEModules.cpp  Flogic.cpp  Func.cpp  Func6.cpp  FuncChannel.cpp  FuzzyH.cpp  FuzzyLogicH.cpp  FuzzyLogicZ.cpp  FuzzyZ.cpp  Gator.cpp  Hostage.cpp  Module.cpp  Ranger.cpp  Stage.cpp  Stage.hpp  Swave.cpp  Tapers.cpp  Upstage.cpp  Xycloid.cpp  Zadeh.cpp  bicycle-module.h  booster-stage-module.h  booster-stage-widget.cpp  booster-stage-widget.h  cubic-module.h  cycloid-module.h  hostage-module.h  level-control.h  module-widget.cpp  module-widget.h  module.h  sj-module.h  (+23 more)
src/panels/: BlossomPanel.cpp  BoosterStagePanel.cpp  CubicPanel.cpp  CurveSequencer16Panel.cpp  CurveSequencer8Panel.cpp  FlogicPanel.cpp  Func6Panel.cpp  FuncPanel.cpp  FuzzyHPanel.cpp  FuzzyLogicHPanel.cpp  FuzzyLogicZPanel.cpp  FuzzyZPanel.cpp  HostagePanel.cpp  RangerPanel.cpp  StagePanel.cpp  SwavePanel.cpp  TapersPanel.cpp  UpstagePanel.cpp  XycloidPanel.cpp  ZadehPanel.cpp  assets.h  dimensions.h  panel-widget.h
src/params/: common-config.h  curvature-config.h  curvature-knob-quantity.h  custom-knob-quantity.h  discrete-quantity.h  duration-config.h  duration-knob-quantity.h  duration-params.h  float-params.h  int-params.h  knob-params.h  knob-quantity.h  level-config.h  mapped-knob-quantity.h  picker-switch-quantity.h  presets.h  ranged-knob-quantity.h  scaled-knob-quantity.h  switch-quantity.h
src/plugin/: DHEModules.cpp  DHEModules.hpp  PluginInitializer.cpp  dhe-modules.cpp  dhe-modules.h
src/signals/: angular.h  basic.h  common-inputs.h  curvature-inputs.h  curvature-signals.h  curvature.h  duration-inputs.h  duration-ranges.h  duration-signals.h  durations.h  enums.h  gain.h  level-inputs.h  levels.h  phase.h  (+8 more)
test/: CMakeLists.txt  CurveSequencerEngineTests.cpp  CurveSequencerSequenceTests.cpp  DurationInputTests.cpp  DurationTests.cpp  EdgeDetectorTests.cpp  FakeModule.cpp  LevelInputTests.cpp  LevelTests.cpp  RangedDurationTests.cpp  booster-stage-tests.cpp  cubic-tests.cpp  defer-gate-tests.cpp  fake-stage-model.h  follower-tests.cpp  runner.cpp  stage-tests.cpp  swave-tests.cpp  track-and-hold-amplifier-tests.cpp  track-and-hold-tests.cpp  upstage-tests.cpp
(+1910 files in other folders)
