add_library(stage
        BoosterStage.cpp
        BoosterStagePanel.cpp
        Hostage.cpp
        HostageMachine.cpp
        HostagePanel.cpp
        Stage.cpp
        StageMachine.cpp
        StagePanel.cpp
        Upstage.cpp
        UpstagePanel.cpp
        )
target_include_directories(stage PUBLIC .)
target_link_libraries(stage
        PUBLIC
        components
        controls
        config
        widgets
        racksdk
        )
